Added meta for embed

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:site_name" content="Ayoub Said" />
+    <meta property="og:title" content="Ayoub's Portfolio" />
+    <meta property="og:description" content="Minecraft plugin and software developer" />
+    <meta property="og:url" content="https://ayoubsaid.site" />
+    <meta property="og:type" content="website" /> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
